[tool.poetry]
name = "llm-prompt-recovery"
version = "0.1.0"
description = "recreate the prompt used to generate a certain text"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
ipykernel = "^6.29.4"
langchain = "^0.1.14"
langchain-core = "^0.1.40"
python-dotenv = "^1.0.1"
huggingface-hub = "^0.22.2"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
